[package]
name = "dirsize"
version = "0.1.0"
authors = ["BigOyayubi <55793780+BigOyayubi@users.noreply.github.com>"]
description = """
DirectorySize is a calculate tool of file size in directory.
"""
documentation = "https://github.com/BigOyayubi/DirectorySize.git"
homepage = "https://github.com/BigOyayubi/DirectorySize.git"
repository = "https://github.com/BigOyayubi/DirectorySize.git"
readme = "README.md"
categories = ["command-line-utilities"]
license = "Apache-2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
log = "0.4.5"
rayon = "1.1"

[[bin]]
bench = false
path = "src/main.rs"
name = "ds"